Feature/app reg def template rendering (#94)
* New Role for Rendering Appdef and RegDef is added in this

* New Role for Rendering Appdef and RegDef is added in this (#64)

Co-authored-by: jara1022 <jackson.raj@netcracker.com>

* Renaming the role

* Renaming Role (#65)

* New Role for Rendering Appdef and RegDef is added in this

* Renaming the role

---------

Co-authored-by: jara1022 <jackson.raj@netcracker.com>
Co-authored-by: GlimmerCape <79522742+GlimmerCape@users.noreply.github.com>

* Refactored code

* Refactored code (#66)

* New Role for Rendering Appdef and RegDef is added in this

* Renaming the role

* Refactored code

---------

Co-authored-by: jara1022 <jackson.raj@netcracker.com>
Co-authored-by: GlimmerCape <79522742+GlimmerCape@users.noreply.github.com>

* Added Debug to the code

* Added Debug to the code (#67)

* New Role for Rendering Appdef and RegDef is added in this

* Renaming the role

* Refactored code

* Added Debug to the code

---------

Co-authored-by: jara1022 <jackson.raj@netcracker.com>
Co-authored-by: GlimmerCape <79522742+GlimmerCape@users.noreply.github.com>

* find is changed to stat

* fix issue

* fix issue (#69)

Co-authored-by: jara1022 <jackson.raj@netcracker.com>

* fix issue 2

* fixing issue 2 (#71)

* fix issue

* fix issue 2

---------

Co-authored-by: jara1022 <jackson.raj@netcracker.com>

* missing vars defined

* Minor code fix

* Minor code fix (#74)

Co-authored-by: jara1022 <jackson.raj@netcracker.com>

* fix debug

* imporved code and fixed issues

* minor fix 3

* major fix 1

* major fix 2

* major fix 3

* major fix 4

* major fix 5

* major fix 6

* major fix 7

---------

Co-authored-by: jara1022 <jackson.raj@netcracker.com>
Co-authored-by: Jackson Raj A <150916845+BackendBits@users.noreply.github.com>
Co-authored-by: Andrei Rudchenko <104736077+andyroode@users.noreply.github.com>

--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -167,3 +167,99 @@
       loop_control:
         loop_var: paramset_file
       when: paramset_templates.files | length > 0
+
+# Validate Required Variables
+
+    - name: Validate required variables
+      ansible.builtin.assert:
+        that:
+          - templates_dir is defined
+          - env_instances_dir is defined
+          - cluster_name is defined
+          - current_env_dir is defined
+        fail_msg: "Missing one or more required variables: templates_dir, env_instances_dir, cluster_name, current_env_dir. Please check your configuration."
+
+# Check for APP_REG_DEFS_JOB Parameter
+
+    - name: Check if APP_REG_DEFS_JOB is defined
+      ansible.builtin.set_fact:
+        use_external_defs: "{{ app_reg_defs_job is defined and app_reg_defs_job | length > 0 }}"
+
+    - name: Log external definitions usage
+      ansible.builtin.debug:
+        msg: "APP_REG_DEFS_JOB variable is set, Application and Registry definitions from corresponding job will be used for the Environment"
+      when: use_external_defs
+
+    - name: Process external definitions
+      block:
+        - name: Get and unpack external definitions
+          ansible.builtin.unarchive:
+            src: "{{ jenkins_artifacts_dir }}/{{ app_reg_defs_job }}/definitions.zip"
+            dest: "/tmp/external_defs"
+            remote_src: true
+          
+        - name: Copy external AppDefs to environment
+          ansible.builtin.copy:
+            src: "/tmp/external_defs/{{ app_defs_path }}/"
+            dest: "{{ current_env_dir }}/AppDefs/"
+            remote_src: true
+          when: app_defs_path is defined
+
+        - name: Copy external RegDefs to environment
+          ansible.builtin.copy:
+            src: "/tmp/external_defs/{{ reg_defs_path }}/"
+            dest: "{{ current_env_dir }}/RegDefs/"
+            remote_src: true
+          when: reg_defs_path is defined
+      when: use_external_defs
+
+# Discover and Render AppDef / RegDef Templates
+
+    - name: Find AppDef templates
+      ansible.builtin.find:
+        paths: "{{ templates_dir }}/appdefs"
+        patterns:
+          - "*.yaml.j2"
+          - "*.yml.j2"
+          - "*.j2"
+        recurse: true
+        use_regex: false
+        file_type: file
+      register: appdef_templates
+      ignore_errors: true
+      when: not use_external_defs
+
+    - name: Find RegDef templates
+      ansible.builtin.find:
+        paths: "{{ templates_dir }}/regdefs"
+        patterns:
+          - "*.yaml.j2"
+          - "*.yml.j2"
+          - "*.j2"
+        recurse: true
+        use_regex: false
+        file_type: file
+      register: regdef_templates
+      ignore_errors: true
+      when: not use_external_defs
+
+    - name: Debug - Found AppDef and RegDef templates
+      ansible.builtin.debug:
+        msg:
+          - "AppDefs Found: {{ appdef_templates.files | default([]) | length }}"
+          - "RegDefs Found: {{ regdef_templates.files | default([]) | length }}"
+      when: not use_external_defs
+
+# Conditionally Render Templates if Present
+
+    - name: Render AppDef / RegDef templates
+      ansible.builtin.include_role:
+        name: generate_appregdefs
+      vars:
+        appdef_templates_files: "{{ appdef_templates.files | default([]) }}"
+        regdef_templates_files: "{{ regdef_templates.files | default([]) }}"
+      when: >
+        not use_external_defs and
+        ((appdef_templates.files is defined and appdef_templates.files | length > 0) or
+        (regdef_templates.files is defined and regdef_templates.files | length > 0))
+
