App reg def temp branch (#108)
* Update main.yaml

* Update render_single_appdef.yaml

* Update render_single_regdef.yaml

--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -222,6 +222,8 @@
           - "*.yaml.j2"
           - "*.yml.j2"
           - "*.j2"
+          - "*.yaml"
+          - "*.yml"
         recurse: true
         use_regex: false
         file_type: file
@@ -236,6 +238,8 @@
           - "*.yaml.j2"
           - "*.yml.j2"
           - "*.j2"
+          - "*.yaml"
+          - "*.yml"
         recurse: true
         use_regex: false
         file_type: file
