--- a/env-builder/roles/generate_appregdefs/tasks/render_single_appdef.yaml
+++ b/env-builder/roles/generate_appregdefs/tasks/render_single_appdef.yaml
@@ -41,7 +41,8 @@
     appdefs:     "{{ appdefs }}"
     artifactId:  "{{ artifactId }}"
     groupId:     "{{ groupId }}"
-
+    current_env: "{{ current_env }}"
+    
 - name: Set rendered AppDef path
   set_fact:
     appdef_rendered_path: "{{ tmp_render_dir }}/{{ template_name }}.{{ render_timestamp }}.rendered.appdef.yml"
