Updated the logic for render

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -156,11 +156,11 @@
     - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Render and display solution_structure
-  ansible.builtin.debug:
-    msg: "{{ (solution_structure | to_json) | ansible.builtin.template | from_json }}"
+  debug:
+    msg: "{{ lookup('template', '{{ solution_structure | to_json }}') | from_json }}"
   when:
     - sd_files_check is defined
-    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0    
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Merge solution_structure into current_env
   no_log: True
