Updated the logic for render

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -169,7 +169,7 @@
 
 - name: Render template and parse JSON
   set_fact:
-    solution_structure: "{{ lookup('template', temp_template.path) | from_json }}"
+    solution_structure: "{{ lookup('template', temp_template.path) }}"
 
 - name: Delete temporary template file
   file:
