--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -187,37 +187,44 @@
     - sd_files_check is defined
     - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
-- name: Show solution_structure variable
-  debug:
-    var: solution_structure
-  when:
-    - sd_files_check is defined
-    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
-
-
 - name: Create temporary template file to render solution_structure
   tempfile:
     state: file
     suffix: .j2
   register: temp_template
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Write solution_structure to temp template file
   copy:
     content: "{{ solution_structure }}"
-    dest: "{{ temp_template.path }}"  
+    dest: "{{ temp_template.path }}"
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0  
 
 - name: Render template and parse JSON
   set_fact:
     solution_structure: "{{ lookup('template', temp_template.path) }}"
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0  
 
 - name: Delete temporary template file
   file:
     path: "{{ temp_template.path }}"
     state: absent
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0  
 
 - name: Show rendered solution_structure
   debug:
-    var: solution_structure    
+    var: solution_structure
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0   
 
 - name: Merge solution_structure into current_env
   no_log: True
@@ -227,7 +234,7 @@
     - sd_files_check is defined
     - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
-- name: Pre-render the existing templates
+#- name: Pre-render the existing templates
   template:
     src: "{{ item.template_path }}"
     dest: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
@@ -236,25 +243,25 @@
     - sd_files_check is defined
     - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
     - current_env.solution_structure is defined and current_env.solution_structure != {}
-
-- name: Re-write existing templates
-  copy:
-    src: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
-    dest: "{{ item.template_path }}"
-    remote_src: yes
-    force: yes
-  loop: "{{ env_template_path }}"
-  when:
-    - sd_files_check is defined
-    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
-    - current_env.solution_structure is defined and current_env.solution_structure != {}
-
-- name: Remove temporary created pre-rendered ymls
-  file:
-    path: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
-    state: absent
-  loop: "{{ env_template_path }}"
-  when:
-    - sd_files_check is defined
-    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
-    - current_env.solution_structure is defined and current_env.solution_structure != {}
+#
+#- name: Re-write existing templates
+#  copy:
+#    src: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
+#    dest: "{{ item.template_path }}"
+#    remote_src: yes
+#    force: yes
+#  loop: "{{ env_template_path }}"
+#  when:
+#    - sd_files_check is defined
+#    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
+#    - current_env.solution_structure is defined and current_env.solution_structure != {}
+#
+#- name: Remove temporary created pre-rendered ymls
+#  file:
+#    path: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
+#    state: absent
+#  loop: "{{ env_template_path }}"
+#  when:
+#    - sd_files_check is defined
+#    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
+#    - current_env.solution_structure is defined and current_env.solution_structure != {}
